JumpScript/tests/baselines/reference/unusedImports7.errors.txt
tests/cases/compiler/file2.jump(1,13): error TS6133: 'n' is declared but its value is never read.


==== tests/cases/compiler/file1.jump (0 errors) ====
    export class Calculator {
        handleChar() {}
    }
    
    export function test() {
    
    }
    
    export default function test2() {
    
    }
    
==== tests/cases/compiler/file2.jump (1 errors) ====
    import * as n from "./file1"
                ~
!!! error TS6133: 'n' is declared but its value is never read.
    
    